KeepassDX (2.5.0.0beta17)
 * Fix font and search

KeepassDX (2.5.0.0beta16)
 * New search in a single fragment
 * Search suggestions
 * Added the display of usernames
 * Added translations
 * Fix read-only mode
 * Fix parcelable / toolbar / back

KeepassDX (2.5.0.0beta15)
 * Read only mode
 * Best group recovery for the navigation fragment
 * Fix copies in notifications
 * Fix orientation
 * Added translations

KeepassDX (2.5.0.0beta14)
 * Optimize all the memory with parcelables / fix search

KeepassDX (2.5.0.0beta13)
 * Fix memory issue with parcelable (crash in beta12 version)

KeepassDX (2.5.0.0beta12)
 * Added the Magikeyboard to fill the forms (settings still in development)
 * Added move and copy for groups and entries
 * New navigation in a single screen / new animations between activities
 * New icons for the material pack / vectorization
 * New adaptive launcher icon
 * Icons depends now of setting of list items
 * Added a setting to disable the open button when no password is identified
 * Added a setting to disable the education screens
 * Added a setting to disable the copy of protected custom fields
 * Fix the fingerprint recognition (WARNING : The keystore is reinit, you must delete the old keys)
 * Fix small bugs

KeepassDX (2.5.0.0beta11)
 * Fix crash in beta10 version

KeepassDX (2.5.0.0beta10)
 * Dynamically change Algorithm and Key Derivation Function in settings
 * Upgrade translations
 * New red volcano theme, fix classic dark theme
 * Add Material Icon Pack to the Free version
 * Update fingerprint state with checkbox
 * Fix bugs

KeepassDX (2.5.0.0beta9)
 * Education Screens to learn how to use the app
 * New designs
 * New custom font for character visibility
 * New themes
 * New icon pack
 * Change setting organisation
 * Pro version

KeepassDX (2.5.0.0beta8)
 * Hide custom entries protected
 * Best management of field references (https://keepass.info/help/base/fieldrefs.html)
 * Change database / default settings