@@ -24,10 +24,10 @@
     android:layout_height="wrap_content"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:paddingEnd="24dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:paddingStart="24dp"
+    android:paddingEnd="12dp"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingStart="12dp"
     android:background="?android:attr/selectableItemBackground">
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/file_filename"
@@ -51,5 +51,5 @@
         android:src="@drawable/ic_info_white_24dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:tint="?attr/textColorInverse"/>
+        android:tint="?android:attr/textColorHintInverse"/>
 </RelativeLayout>
