@@ -21,6 +21,7 @@
         android:textStyle="italic"/>
 
     <LinearLayout
+        android:id="@+id/file_modification_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end">
@@ -39,6 +40,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/file_size_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
@@ -67,6 +69,7 @@
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:gravity="end"
+        android:text="@string/file_not_found"
         style="@style/KeepassDXStyle.TextAppearance.WarningTextStyle"/>
 </LinearLayout>
